updated styles and layout of header

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 </head>
 <body>
     <div class="header">
-        <div class="container-fluid">
-  
-          <img src="./images/aa.ux2.png" alt="logo">
+        <div class="container-fluid d-flex">
+          <div class="logo">
+            <img src="./images/aa.ux2.png" alt="logo">
+          </div>
         
-    <ul class="nav justify-content-end">
-      
-        <li class="nav-item">
-          <a class="nav-link" href="#">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Resume</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+      </div>
     </div>
-</div>
     <section class="hero">
 
       <div class="picOfMe">
