--- a/index.html
+++ b/index.html
@@ -31,20 +31,25 @@
           </ul>
       </div>
     </div>
-    <section class="hero">
-
-      <div class="picOfMe">
+    <section id="heroGrid">
+      <div id="shotOfMe" class="heroGridArea">
+        <div id="myShot">
         <img src="https://via.placeholder.com/300" alt="picture of me">
+        </div>
+
+      </div>
+       
+      <div id="phoneFrame" class="heroGridArea">
+        <div id="cellPhone">
+        <img src="./images/handphoneframe.png" alt="iphone 14 frame">
       </div>
 
-        <div class="phoneFrame">
-        <img src="./images/handphoneframe.png" alt="iphone 14 frame">
-        <div class="descWindow">
+        <div id="descWindow">
         <p>I am a product designer and developer with a drive to make lives easier with my skillset. I’m based in Toronto, Canada</p>
           </div>
         <button>Check Out My Work</button>
 
-          </div>
+      </div>
 
     </section>
 
